<resources>
    <string name="app_name">TravelWithMe</string>
    <string name="name">TravelWithMe</string>
    <string name="splashImg">Splash Activity</string>
    <string name="txtSignIn">Sign In</string>
    <string name="txtSignUp">Sign Up</string>
    <string name="title_Main">Home</string>
    <string name="title_maps">Maps</string>
    <string name="title_tours">Tours</string>
    <string name="title_logout">Logout</string>
    <string name="text_reviews">Reviews</string>
    <string name="writeReview">Write a Review</string>
    <string name="reviewButton">Submit</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="txtUserEmail">User Email:</string>
    <string name="txtUserRole">User Role</string>
    <string name="btnDel">Delete</string>
    <string name="deleting">Enter user id to delete user</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="add">Add</string>
    <string name="reserve">Reserve</string>
    <string name="book">Book a Room</string>
    <string name="addAReview">Add a Review</string>
    <string name="suite">Suite:</string>
    <string name="price">Price:</string>
</resources>
