<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/hotelLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HotelReviewsFragment">
    
    
    <TextView
        android:layout_width="match_parent"
        android:id="@+id/hotelNames"
        android:layout_height="40dp"
        android:layout_marginBottom="30dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/suiteTextView"
            android:layout_weight="1"
            android:text="@string/suite"
            android:gravity="center"
            android:textSize="22sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/suiteValueTextView"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="22sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/priceTextView"
            android:layout_weight="1"
            android:text="@string/price"
            android:gravity="center"
            android:textSize="22sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/priceValueTextView"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="22sp"/>

    </LinearLayout>


    <EditText
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:id="@+id/addReviewEditText"/>

    <Button
        android:id="@+id/addReview"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:text="@string/addAReview"/>




</LinearLayout>
    
    
        
    
    
    